# sync-tools

./: .gitignore  CLAUDE.md  DEVELOPING.md  DEVELOPMENT-TRACKER.md  GO_README.md  Makefile  Makefile.go  README.md  README_PYTHON_OLD.adoc  ReadMe.adoc  SyncFile  TESTING.md  go.mod  go.sum  pyproject.toml  sync.sh
.github/: copilot-instructions.md  release-drafter.yml
.github/workflows/: ci.yml  hugo.yml  release-drafter.yml  release.yml  rsync-matrix.yml
cmd/sync-tools/: main.go
docs/: PRD-interactive-sync.md  RELEASE_TASKS.adoc  go.mod  hugo.toml  package.json  user_guide.adoc
docs/archive/: sync.sh
docs/content/: _index.md
features/: basic_sync.feature  filters.feature  git_patch.feature  git_report.feature  gitdir.feature  gitignore_import.feature  hello_world.feature  hidden.feature  ignore.feature  ignore_patterns.feature  interactive_sync.feature  merge_tool_basic.feature  merge_tools.feature  plan_execution.feature  source_filters.feature  sync.feature  two_way.feature  whitelist.feature
features/steps/: hello_world_steps.py  (+1 more)
sync_tools/: __init__.py  __main__.py  cli.py  config.py  rsync_wrapper.py
temp_dest/: hello.txt
tests/: test_cli.py  test_cli_git_failure.py  test_cli_git_source.py  test_cli_zip_source.py  test_config.py  test_filters.py  test_hello_world.py  test_integration.py  test_pattern_matching.py  test_report.py  test_rsync_parity.py
tools/: build_pex.sh  build_pyinstaller.sh  build_shiv.sh  build_zipapp.sh  build_zipapp_with_deps.sh  install_local.sh  package_install_local.sh  rsync_parity_harness.py  sync-tools-launcher.sh
(+22 files in other folders)
