[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sync-tools"
version = "0.1.0"
description = "sync-tools: Python wrapper and utilities for the sync.sh rsync-based sync tool."
authors = [
    { name="Damian Reeves" }
]
dependencies = [
    "click"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = { find = { include = ["sync_tools*"] } }

[project.scripts]
# Console script entrypoint that installs a `sync-tools` launcher which exposes the click CLI group
sync-tools = "sync_tools.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "behave",
    "pytest-bdd",
]
